# app/model/vote.go
@@ -15,11 +15,27 @@ type Vote struct {
 	ID    		uint64 	  `gorm:"primaryKey;autoIncrement:false;comment:ID" json:"id"`
 	Title       string 	  `gorm:"size:100;not null;" json:"title"`
 	Description string 	  `gorm:"size:255;not null;" json:"description"`
-	StartTime   string 	  `gorm:"type:timestamp;not null;" json:"start_time"`
-	EndTime     string 	  `gorm:"type:timestamp;not null;" json:"end_time"`
+	StartTime   string 	  `gorm:"type:datetime;not null;" json:"start_time"`
+	EndTime     string 	  `gorm:"type:datetime;not null;" json:"end_time"`
 	UserID      uint64 	  `gorm:"index;not null;" json:"user_id"`
-	CreatedAt   time.Time `gorm:"type:timestamp;default:CURRENT_TIMESTAMP" json:"created_at"`
-	UpdatedAt   time.Time `gorm:"type:timestamp;default:CURRENT_TIMESTAMP" json:"updated_at"`
+	CreatedAt   time.Time `gorm:"type:datetime;default:CURRENT_TIMESTAMP" json:"created_at"`
+	UpdatedAt   time.Time `gorm:"type:datetime;default:CURRENT_TIMESTAMP" json:"updated_at"`
+}
+
+type VoteCreate struct {
+	Title       string `json:"title" binding:"required" example:"title"`
+	Description string `json:"description" binding:"required" example:"description"`
+	UserID      uint64 `json:"user_id" example:"1"`
+	StartTime   string `json:"startTime" binding:"required" example:"2006-01-02 15:04:05"`
+	EndTime     string `json:"endTime" binding:"required" example:"2006-01-02 15:04:05"`
+}
+
+type VoteUpdate struct {
+	Title       string `json:"title" example:"title"`
+	Description string `json:"description" example:"description"`
+	UserID      uint64 `json:"user_id" example:"1"`
+	StartTime   string `json:"startTime" example:"2006-01-02 15:04:05"`
+	EndTime     string `json:"endTime" example:"2006-01-02 15:04:05"`
 }
 
 // This functions are called before creating any Post
